fixed #main flickering when open the sidebar

--- a/src/less/tablet.less
+++ b/src/less/tablet.less
@@ -46,6 +46,7 @@
 	margin-left: @tabletHandlerWidth + @tabletMainHMargin + @tabletSidebarOffset;
 	
 	.transition(all @sideTransition);
+	-webkit-backface-visibility: hidden;
 }
 
 .side-open {
